Fixed z-index issues

--- a/docroot/sites/all/themes/ambitious/css/issue-fixing.css
+++ b/docroot/sites/all/themes/ambitious/css/issue-fixing.css
@@ -379,7 +379,7 @@ body > .jcf-select-drop.jcf-drop-flipped {
 
 /* line 30, ../sass/issue-fixing.scss */
 .front .slider-block {
-  z-index: 1100;
+  z-index: 998;
   position: relative;
   top: 24px;
 }
