--- a/docroot/sites/all/themes/ambitious/sass/all.scss
+++ b/docroot/sites/all/themes/ambitious/sass/all.scss
@@ -682,9 +682,8 @@ input[type=submit], input[type=text], input[type=search], input[type=tel], input
 	  }
 	  a.more-bt{
 	     font-size:17px;
-		 font-weight:bold;
 		 text-decoration: underline;
-		 font-family: Helvetica, sans-serif;
+		 font-family: $font-bold;
 		 &:hover{
 		    text-decoration: none;
 		 }
@@ -745,9 +744,8 @@ input[type=submit], input[type=text], input[type=search], input[type=tel], input
 	    font-size:15px;
 	  }
 	  a{
-	    font-weight: bold;
-		text-decoration: underline;
-		font-family: Helvetica, sans-serif;
+	    text-decoration: underline;
+		font-family: $font-bold;
 		&:hover{
 		  text-decoration: none;
 		}
@@ -820,7 +818,7 @@ input[type=submit], input[type=text], input[type=search], input[type=tel], input
 		  width:25%;
 		  float:left;
 		  text-align:center;
-		  font-weight: bold;
+		  font-family: $font-bold;
 		  font-size:13px;
 		  margin-top:4px;
 		  .date{
