--- a/docroot/sites/all/themes/ambitious/sass/visual.scss
+++ b/docroot/sites/all/themes/ambitious/sass/visual.scss
@@ -6,7 +6,7 @@
 	overflow: hidden;
 	.img-holder{
 		.caption-frame{
-			z-index: 1000;
+			z-index: 998;
 			position: absolute;
 			top: 0;
 			.caption{ 
